--- a/public/general.css
+++ b/public/general.css
@@ -2,6 +2,7 @@
 /* https://maketintsandshades.com/#003049,#d62828,#f77f00,#fcbf49,#eae2b7 */
 
 :root {
+  --bg-dark-08: #001825dd;
   --bg-dark-05: #00182599;
   --bg-dark: #001825;
   --bg: #003049;
@@ -32,6 +33,7 @@ body {
   font-family: "Rubik", sans-serif;
   background-color: var(--bg-dark);
   color: var(--white-light);
+  overflow-x: hidden;
 }
 
 .visually-hidden {
